--- a/DiffBackup/DiffBackup.csproj
+++ b/DiffBackup/DiffBackup.csproj
@@ -124,6 +124,7 @@
         <Compile Include="TLog.cs" />
         <Compile Include="TdiffPlugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="WorldSaveTrackingStrategy.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
